# chat-py-demo

./: Cargo.toml  Makefile  README.md  build.rs  chat_ast.json  pyproject.toml
python/chat_py_demo/: __init__.py  chat_ast.py
python/tests/: test_all.py
src/: ast.rs  chat.l  chat.y  lib.rs  main.rs
src/snapshots/: chat_py_demo__tests__sample_json.snap
