[package]
name = "chat-py-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chat_py_demo"
crate-type = ["lib", "cdylib"]

[dependencies]
pyo3 = "0.20.0"

serde = { version = "*", features = ["derive"] }
serde_with = "*"
schemars = "*"
serde_json = "*"

lalrpop-util = "*"
cfgrammar = "*"
lrlex = "*"
lrpar = "*"

[build-dependencies]
lalrpop = { version = "*", features = ["lexer"] }
cfgrammar = "*"
lrlex = "*"
lrpar = "*"

[dev-dependencies]
insta = { version = "*", features = ["yaml", "redactions", "glob"] }
